--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -26,6 +26,8 @@
     "import requests\n",
     "import gmaps\n",
     "import os\n",
+    "import json\n",
+    "\n",
     "\n",
     "# Import API key\n",
     "from api_keys import g_key"
@@ -45,7 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# read the cities.csv to create dataframe, previous cells are not needed to be executed as long as cities.csv was created\n",
+    "cities = pd.read_csv(\"output_data/cities.csv\", encoding=\"utf-8\")\n",
+    "cities.head()\n"
    ]
   },
   {
