--- a/WeatherPy/Weather.ipynb
+++ b/WeatherPy/Weather.ipynb
@@ -18,7 +18,19 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "import random\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import requests\n",
+    "import json\n",
+    "from scipy.stats import linregress\n",
+    "from pprint import pprint\n",
+    "from citipy import citipy\n",
+    "from api_keys import weather_api_key\n",
+    "from api_keys import g_key"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,7 +55,29 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# generate city list from the file that is distributed by openweather.org, save to \"allcities.csv\"\n",
+    "with open('city.list.json', 'r',encoding='utf-8') as jsonfile:\n",
+    "    jsndata = json.load(jsonfile)\n",
+    "\n",
+    "ids = []\n",
+    "name = []\n",
+    "country = []\n",
+    "lat = []\n",
+    "lon = []\n",
+    "\n",
+    "for i in range(len(jsndata)):\n",
+    "    ids.append(jsndata[i]['id'])\n",
+    "    name.append(jsndata[i]['name'].lower())\n",
+    "    country.append(jsndata[i]['country'])\n",
+    "    # need to lower the letter case because citipy uses lower case letters\n",
+    "    lat.append(jsndata[i]['coord']['lat'])\n",
+    "    lon.append(jsndata[i]['coord']['lon'])\n",
+    "    \n",
+    "dftemp = pd.DataFrame({'id':ids,'City':name,'Country':country,'Lat':lat,'Lng':lon})\n",
+    "dftemp\n",
+    "#dftemp.to_csv(\"output_data/allcities.csv\", index=False, header=True)"
+   ]
   },
   {
    "cell_type": "markdown",
